--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/Users/User/curso-react-intro/build/"
+  "homepage": "htts://montcristian.github.io/curso-react-intro"
   
 }
