--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -29,6 +31,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "htts://montcristian.github.io/curso-react-intro"
-  
+  "homepage": "htts://montcristian.github.io/curso-react-intro",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
